--- a/src/CardContainer.scss
+++ b/src/CardContainer.scss
@@ -2,8 +2,13 @@
 
 
 .CardContainer {
+  display: flex;  
+}
+
+.flash-card-container {
   display: flex; 
-  flex-wrap: wrap; 
+  flex-direction: row; 
+  flex-wrap: wrap;
 }
 
 
