--- a/src/CardContainer.scss
+++ b/src/CardContainer.scss
@@ -2,14 +2,11 @@
 
 
 .CardContainer {
-  display: flex;  
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: space-around; 
 }
 
-.flash-card-container {
-  display: flex; 
-  flex-direction: row; 
-  flex-wrap: wrap;
-}
 
 
 
