Review container is now set properly in layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,7 +52,7 @@ h3 {
 
 .review-container {
   @include display-flex(column); 
-  margin-right: 100px; 
+  margin: 0 auto; 
   height: 600px;
   width: 600px; 
   background-color: $not-white; 
